<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Introduction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/CreateAccountIcon"
                android:layout_width="138dp"
                android:layout_height="122dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                app:srcCompat="@mipmap/ic_icon" />

            <TextView
                android:id="@+id/CreateAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/CreateAccountIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/CreateAnAccount"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/CreateAnAccount"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/FirstName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/FirstName"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/LastName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/EmailCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LastName"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/Telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmailCreate"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/Telephone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Telephone"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Password"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@color/pink"
                android:text="@string/SignUp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/AlreadyHaveAnAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SignUp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="30dp"
                android:background="@color/orange"
                android:text="@string/AlreadyHaveAnAccount"
                android:textAllCaps="false"
                android:textColor="#F6F4F4" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>