<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer_MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/actionbar" android:id="@+id/action_barMain" > </include>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/action_barMain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/myplaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/blue"
                android:text="@string/myplaces" />

            <Button
                android:id="@+id/myappointments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/myplaces"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/blue"
                android:text="@string/myappointment" />

            <Button
                android:id="@+id/newappoitnment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/myappointments"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/blue"
                android:text="@string/newappointment" />

            <Button
                android:id="@+id/placesnearme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newappoitnment"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/blue"
                android:text="@string/placesnearme" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

