<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".owner_saloon">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/customertext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            />

            <TextView
                android:id="@+id/telephonedb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:shadowColor="#000000"
                android:text="@string/customer"
                android:textColor="#000000"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btncustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/telephonedb"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/orange"
                android:text="@string/customer1" />

            <TextView
                android:id="@+id/addresstxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btncustomer"
                android:layout_centerInParent="true"
                android:layout_marginTop="150dp"
                android:text="@string/owner"
                android:textColor="#000000"
                android:textSize="22dp" />

            <Button
                android:id="@+id/ownerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addresstxt"
                android:layout_alignParentRight="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/orange"
                android:text="@string/owner1" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>