<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Owner_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/actionBarLogin"
                layout="@layout/actionbar"> </include>

            <TextView
                android:id="@+id/welcometxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/actionBarLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/welcome"
                android:textSize="22dp" />

            <Button
                android:id="@+id/btnMySaloon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcometxt"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/blue"
                android:drawableLeft="@android:drawable/ic_menu_myplaces"
                android:drawableTint="#000000"
                android:text="@string/Mysaloon" />

            <Button
                android:id="@+id/btnOwnerAppointments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnMySaloon"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/blue"
                android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                android:drawableTint="#000000"
                android:text="@string/myappointment" />

            <Button
                android:id="@+id/ownerPrices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnOwnerAppointments"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/blue"
                android:drawableLeft="@android:drawable/stat_sys_warning"
                android:drawableTint="#000000"
                android:text="@string/Myprices" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>