<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <include layout="@layout/actionbar" android:id="@+id/action_barSettings" > </include>

            <Button
                android:id="@+id/editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/action_barSettings"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="50dp"
                android:text="@string/editprofile" />

            <Button
                android:id="@+id/changelocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editprofile"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:text="@string/changelocation" />

            <Button
                android:id="@+id/privacyandterms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/changelocation"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:text="@string/PrivacyandTerms" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>